fix some layout problem

--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ section{
     width: 30px;
   }
   .title{
-    font-size: 1.4rem;
+    font-size: 1.8rem;
     text-align: center;
   }
 
